add logout and backend

--- a/templates/content_app/base.html
+++ b/templates/content_app/base.html
@@ -19,9 +19,9 @@
         {% endif %}
       {% endfor %}
     </div>
-  <form method='POST'>
+  <form method='POST' enctype="multipart/form-data">
   {% csrf_token %}
-  {{ form.file_field }}
+  {{ form }}
   <input type='submit' value='Загрузить'/>
   <form/>
   </div>
