--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,10 +17,16 @@
           </div>
           <ul class="navbar-nav justify-content-end" >
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Login</a>
+              {% if user.is_authenticated %}
+                <a class="nav-link active" aria-current="page" href="#">{{user}}</a>
+              {% else %}
+                <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+              {% endif %}
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                {% endif %}
               </li>
             </li>
           </ul>
